--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <nav>
-        <div class="logo"><img src="logo.png" width="150px" height="70px" /></div>
+        <div class="logo"><img src="Ram white.png" width="150px" height="70px" /></div>
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
             <li><a href="#">Home</a></li>
@@ -79,7 +79,7 @@
 
 	  <!----       GALLERY LIGHT BOX                  -->
 
-<div class="work"> <hr>OurLatest Work<hr></div>
+<div class="work"> <hr>Our Latest Work<hr></div>
    <div class="container">
 	<div class="item"><a href="img2/img12.jpg" data-fancybox="gallery"><img src="img2/img12.jpg" alt=""></a></div>
 	<div class="item"><a href="img2/img7.jpg" data-fancybox="gallery"><img src="img2/img7.jpg" alt=""></a></div>
