--- a/service.html
+++ b/service.html
@@ -35,8 +35,8 @@
         <div class="openMenu"><i class="fa fa-bars"></i></div>
         <ul class="mainMenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="wedding.html">wedding </a></li>
+            <li><a href="About.html">About Us</a></li>
+            <li><a href="wedding.html">Wedding </a></li>
 			<li><a href="fashion.html">Fashion Shoot</a></li>
 			<li><a href="service.html">Services</a></li>
             <li><a href="#">Contact</a></li>
