--- a/index.html
+++ b/index.html
@@ -54,7 +54,21 @@
         </ul>
     </nav>
 
-	<!------SLIDER  START ------>
+
+
+
+	<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
+<div id="slider">
+<figure>
+<img src="austin-fireworks.jpg" alt>
+<img src="taj-mahal_copy.jpg" alt>
+<img src="ibiza.jpg" alt>
+<img src="ankor-wat.jpg" alt>
+<img src="austin-fireworks.jpg" alt>
+</figure>
+</div>
+
+	<!------SLIDER  START -----
 	<div>
       <ul class="slide">
 		<li class="item">
@@ -74,7 +88,7 @@
 		</li>
 	  </ul>
 	  </div>
-	  <!------sLIDER END---------------->
+	  -----sLIDER END---------------->
 
 
 	  <!----       GALLERY LIGHT BOX                  -->
