--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 	<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
 <div id="slider">
 <figure>
-<img src="austin-fireworks.jpg" alt>
-<img src="taj-mahal_copy.jpg" alt>
-<img src="ibiza.jpg" alt>
-<img src="ankor-wat.jpg" alt>
-<img src="austin-fireworks.jpg" alt>
+<img src="slide/imh6.jpg" alt>
+<img src="slide/img14.jpg" alt>
+<img src="slide/img13.jpg" alt>
+<img src="slide/img32.JPG" alt>
+<img src="slide/img11.jpg" alt>
 </figure>
 </div>
 
