--- a/index.html
+++ b/index.html
@@ -55,18 +55,15 @@
     </nav>
 
 
-
-
-	<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/">
-<div id="slider">
-<figure>
-<img src="slide/imh6.jpg" alt>
-<img src="slide/img14.jpg" alt>
-<img src="slide/img13.jpg" alt>
-<img src="slide/img32.JPG" alt>
-<img src="slide/img11.jpg" alt>
-</figure>
-</div>
+	<header class="cont-slider">
+		<section class="slider">
+		  <article class="slide one"><span1>One</span></article><!--
+		  --><article class="slide two"><span>< Two</span></article><!--
+		  --><article class="slide three"><span> Three</span></article><!--
+		  --><article class="slide four"><span>Four</span></article><!--
+		  --><article class="slide five"><span>Five</span></article>
+		</section>
+	</header>
 
 	<!------SLIDER  START -----
 	<div>
