--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img alt="First slide" class="d-block w-100" src="slide/imh6.jpg"  alt="best bridalmakeup in Aligarh ">
+				<img alt="First slide" class="d-block w-100" src="slide/img13.jpg"  alt="best bridalmakeup in Aligarh ">
 				<div class="carousel-caption d-none d-md-block">
 					<h5 class="animated bounceInRight" style="animation-delay: 1s"></h5>
 				<!----	<p class="animated bounceInLeft" style="animation-delay: 2s"></p>-->
@@ -76,7 +76,7 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img alt="Second slide" class="d-block w-100" src="wedding/img28.JPG"  alt="bridalmakeup best bridalmakeup in Aligarh"">
+				<img alt="Second slide" class="d-block w-100" src="wedding/img35.JPG"  alt="bridalmakeup best bridalmakeup in Aligarh"">
 				<div class="carousel-caption d-none d-md-block">
 				<!----	<h5 class="animated slideInDown" style="animation-delay: 1s"></h5>
 					<p class="animated fadeInUp" style="animation-delay: 2s"></p>-->
@@ -84,7 +84,7 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img alt="Third slide" class="d-block w-100" src="slide/img11.jpg" alt="bridalmakeup best bridalmakeup in Aligarh"">
+				<img alt="Third slide" class="d-block w-100" src="slide/img14.jpg" alt="bridalmakeup best bridalmakeup in Aligarh"">
 				<div class="carousel-caption d-none d-md-block">
 					<!--<h5 class="animated zoomIn" style="animation-delay: 1s"></h5>
 					<p class="animated fadeInLeft" style="animation-delay: 2s"></p>-->
