--- a/service.html
+++ b/service.html
@@ -50,7 +50,7 @@
         </ul>
     </nav>
 
-     <!--===== HOME =====-->
+     <!--===== HOME =====--
      <div class="bg-screen">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin:auto;background:#f1f2f3;display:block;z-index:1;position:relative" width="1920" height="969" preserveAspectRatio="xMidYMid" viewBox="0 0 1920 969">
        <g transform=""><circle cx="0" cy="0" r="2150.665245918109" fill="#00a950" fill-opacity="0.4">
@@ -79,7 +79,7 @@
          <animateTransform attributeName="transform" type="scale" repeatCount="indefinite" dur="2s" begin="0s" keyTimes="0;0.5;1" values="0.943;1.057;0.943" keySplines="0.4 0 0.6 1;0.4 0 0.6 1" calcMode="spline"></animateTransform>
        </circle></g>
        </svg>
-       </div>
+       </div>-->
        
        <div>
          <nav class="navbar navbar-light bg-header text-center">
